feat(typescript): add server generator
